@@ -17,4 +17,5 @@ eDelivery SMP 4.2
     smp.sso.cas.token.validation.params: The CAS token validation key:value properties separated with '|'.Ex: 'acceptStrengths:BASIC,CLIENT_CERT|assuranceLevel:TOP'
     smp.sso.cas.token.validation.groups:  The '|' separated CAS groups user must belong to.
     smp.http.httpStrictTransportSecurity.maxAge: How long(in seconds) HSTS should last in the browser's cache(default one year)
+    smp.http.header.security.policy: Http header content security policy
     
